<resources>
    <string name="app_name">Trivia Questions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--login fragment-->
    <string name="login_with">Login / SignUp With</string>
    <string name="login">Login</string>
    <string name="login_not">Hello, User</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_valid">Password should be at least 6 characters</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="reset_pass">Enter the email address you used when creating the account. A message will be sent to that address containing a link to reset your password.</string>
    <string name="signup">SignUp</string>
    <string name="signup_alert">you are not registered yet, please SignUp</string>
    <string name="logout">Logout</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="coins">Coins</string>
    <string name="statistics">Statistics</string>
    <string name="term_privacy">By Logging / SigningUp in, you agree to our Terms of Service and Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms of Service</string>
    <string name="or">Or</string>

    <!-- Dashboard -->
    <string name="play_quiz">Play Quiz</string>

    <!-- signup -->
    <string name="signup_with">SignUp</string>
    <string name="name">Name</string>
    <string name="no_category">No Category Available</string>
    <string name="title">Title</string>
    <string name="zero">0</string>
    <string name="answer">answer</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="completed">Congratulations!! \n You have completed the quiz.</string>
    <string name="play_again">Play Again</string>
    <string name="quite">Home</string>
    <string name="completed_all">100 %</string>
    <string name="please_wait">Please Wait ....</string>
    <string name="guest">GUEST</string>
    <string name="total_score">total score</string>
    <string name="easy_mode">Easy Mode</string>
    <string name="right_easy">For each right answer 1 points will be given.</string>
    <string name="right_medium">For each right answer 2 points will be given.</string>
    <string name="right_hard">For each right answer 5 points will be given.</string>
    <string name="wrong">0 points for each question</string>
    <string name="medium_mode">Medium Mode</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="msg_leaderboard">You can compare your score with other users of apps</string>
    <string name="lets_play">Lets Play!</string>
    <string name="game_play_mode">Game Play Mode</string>
    <string name="play_random">Play game with random category and mode</string>
    <string name="play_selected">Play game with selected category and mode</string>

    <!-- string category -->
    <string-array name="category_name">
        <item>General Knowledge</item>
        <item>Film</item>
        <item>Television</item>
        <item>Mathematics</item>
        <item>Science and Nature</item>
        <item>Mythology</item>
        <item>Sport</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Anime and Manga</item>
    </string-array>

    <!-- string category -->
    <integer-array name="category_id">
        <item>9</item>
        <item>11</item>
        <item>14</item>
        <item>19</item>
        <item>17</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>31</item>
    </integer-array>


</resources>