<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shadow"
    android:layout_margin="@dimen/margin_dp">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please Login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_10dp"/>

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:src="@drawable/ic_close"
            android:layout_alignParentRight="true"
            app:tint="@color/dark_gray" />
    </RelativeLayout>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"

            android:background="@drawable/drop_shadow" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/refLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

       >

<!--<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_margin="@dimen/margin_dp"
    android:src="@drawable/ic_launcher"/>-->


    </RelativeLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:text="@string/login_with"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/dark_gray"
        android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="@dimen/margin_10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:inputType="textEmailAddress"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/margin_10dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/btnSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:layout_marginEnd="@dimen/margin_10dp"
                    android:layout_weight="1"
                    android:background="@drawable/left_btn_bg"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/mid_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnSignIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:layout_marginEnd="@dimen/margin_10dp"
                    android:layout_weight="1"
                    android:background="@drawable/right_btn_bg"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/mid_text"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    <TextView
        android:id="@+id/tvPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/margin_10dp"
        android:text="@string/term_privacy"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        android:visibility="visible" />
    </LinearLayout>
</RelativeLayout>